# python-testing-best-practices

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SUMMARY.md  TEST_STATISTICS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: coverage.yml  tests.yml
examples/: demo.py
mathlib/: __init__.py  calculator.py  geometry.py  statistics.py
scripts/: commands.py
tests/: conftest.py  test_calculator.py  test_geometry.py  test_integration.py  test_statistics.py
